<resources>
    <string name="app_name">WishSales</string>
    <string name="badge">€</string>
    <!--LoadScreen-->
    <string name="start_text">Bienvenido a la aplicacion WishSales</string>
    <string name="start_button">Acceder</string>
    <string name="start_menber_names">Belatz Arce, Ibon Alonso, Jorge Boado</string>
    <!--GridMenu-->
    <string name="grid_item_button">Titulo Juego</string>
    <string name="grid_list_cover">Portada</string>
    <string name="grid_item_sale">Icono Descuento</string>
    <!--Pager-->
    <string name="last_index_button">Ultimo</string>
    <string name="first_index_button">Primero</string>
    <string name="previous_index_button">Anterior</string>
    <string name="next_index_button">Siguiente</string>
    <string name="page_index_store">Tienda</string>
    <string name="page_index_wish">Lista de Deseos</string>
    <string name="page_index_library">Biblioteca</string>
    <!--Store-->
    <string name="store_button_text">Añadir juego</string>
    <!--WishList-->
    <string name="list_item_name">Titulo Juego</string>
    <string name="list_item_button">Comprar</string>
    <string name="list_cover">Portada</string>
    <string name="list_item_sale">Icono Descuento</string>
    <string name="list_item_price">Precio Actual</string>
    <string name="list_item_old_price">Precio Antiguo</string>
    <!--GameView-->
    <string name="view_game_name">Titulo Juego</string>
    <string name="view_game_cover">Portada</string>
    <string name="view_game_wish">Lista de deseos</string>
    <string name="view_game_price">PrecioActual</string>
    <string name="view_game_price_old">PrecioAntiguo</string>
    <string name="view_game_buy">Comprar</string>
    <string name="view_game_description">Descripcion</string>
    <!--Library-->
    <string name="library_game_name">Titulo</string>
    <string name="library_game_button">Jugar</string>
    <string name="library_game_cover">Portada</string>
    <string name="library_game_funds">Fondos</string>
    <!--GameMaker-->
    <string name="maker_game_name">Titulo</string>
    <string name="maker_game_price">Precio</string>
    <string name="maker_game_description">Descripcion</string>
    <string name="maker_game_button">Crear Juego</string>
    <!--AddFunds-->
    <string name="funds_current_money">Fondos Actuales: </string>
    <string name="funds_add_five">5€</string>
    <string name="funds_add_ten">10€</string>
    <string name="funds_add_twenty">20€</string>
    <string name="funds_selected_value">Has seleccionado: </string>
    <!--DialogWindow-->
    <string name="dialog_close">Close</string>
    <string name="dialog_remove">Quitar</string>
    <string name="dialog_buy">Comprar</string>
    <!--Toast-->
    <string name="toast_add_wish">Se ha añadido a la lista de deseados</string>
    <string name="toast_remove_wish">Se ha eliminado de la lista de deseados</string>
    <string name="toast_thank_buy">Gracias por su compra!</string>
    <string name="toast_not_funds">No tiene suficiente saldo!</string>
    <string name="toast_owned">En posesion</string>
    <string name="toast_launch">Ejecutando </string>
    <string name="toast_dotted_line">...</string>
</resources>
