<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paleta0">

    <TextView
        android:id="@+id/view_game_name"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/view_game_name"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/view_game_cover"
        android:layout_width="121dp"
        android:layout_height="113dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/view_game_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_game_name"
        app:srcCompat="@drawable/icon_1" />

    <Switch
        android:id="@+id/view_game_wish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/view_game_wish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_game_cover" />

    <TextView
        android:id="@+id/view_game_price_old"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:text="@string/view_game_price_old"
        android:textColor="@color/paleta2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_game_wish" />

    <TextView
        android:id="@+id/view_game_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="8dp"
        android:text="@string/view_game_price"
        android:textColor="@color/paleta6"
        app:layout_constraintBottom_toTopOf="@+id/view_game_buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/view_game_price_old" />


    <Button
        android:id="@+id/view_game_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/green_button"
        android:text="@string/view_game_buy"
        android:textColor="@color/paleta6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_game_price_old" />

    <TextView
        android:id="@+id/view_game_description"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@color/paleta3"
        android:padding="10dp"
        android:text="@string/view_game_description"
        android:textColor="@color/paleta0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_game_buy" />
</android.support.constraint.ConstraintLayout>