<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item_game_sale"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@color/paleta3"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/list_game_cover"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/list_cover"
        android:src="@drawable/icon_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_game_name"
        android:layout_width="228dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/list_item_name"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/list_game_image"
        app:layout_constraintStart_toEndOf="@+id/list_game_cover"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- No podemos usar esto por que es de la API 26 y estamos en la 19
        android:autoSizeTextType="uniform"-->

    <ImageView
        android:id="@+id/list_game_image"
        android:layout_width="37dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/list_item_sale"
        android:textColor="@color/paleta6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_descuento" />

    <TextView
        android:id="@+id/list_game_old_price"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/list_item_old_price"
        android:textColor="@color/paleta4"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/list_game_price"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toEndOf="@+id/list_game_cover"
        app:layout_constraintTop_toBottomOf="@+id/list_game_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/list_game_price"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/list_item_price"
        android:textColor="@color/paleta0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/list_game_image"
        app:layout_constraintTop_toBottomOf="@+id/list_game_name"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>